address-order nesting

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,29 +1,29 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-6 col-md-offset-3">
+  <p>
+    <strong>Order no:</strong>
+    <%= @order.order_no %>
+  </p>
 
-<p>
-  <strong>Order no:</strong>
-  <%= @order.order_no %>
-</p>
+  <p>
+    <strong>Tracking no:</strong>
+    <%= @order.tracking_no %>
+  </p>
 
-<p>
-  <strong>Tracking no:</strong>
-  <%= @order.tracking_no %>
-</p>
+  <p>
+    <strong>Purchase total:</strong>
+    <%= @order.purchase_total %>
+  </p>
 
-<p>
-  <strong>Purchase total:</strong>
-  <%= @order.purchase_total %>
-</p>
+  <p>
+    <strong>Order type:</strong>
+    <%= @order.order_type %>
+  </p>
 
-<p>
-  <strong>Order type:</strong>
-  <%= @order.order_type %>
-</p>
+  <p>
+    <strong>User:</strong>
+    <%= @order.user_id %>
+  </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @order.user_id %>
-</p>
-
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+  <%= link_to 'Edit', edit_order_path(@order) %> |
+  <%= link_to 'Back', orders_path %>
+</div>
