--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,9 +18,10 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Products", products_path %></li>
-        <% if current_user && current_user.admin? %>
+        <% if current_user %>
         <li><%= link_to "Orders", orders_path %></li>
         <% end %>
+       
       </ul>
       <ul class="nav navbar-nav navbar-right"> 
         <form class="navbar-form navbar-left">
