--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -36,22 +36,48 @@
     <div class="form-group">
       <%= form.hidden_field :user_id, :value=>current_user.id %>
     </div>
-    
-    
 
-
-    <%= form.fields_for :order_product do |product_fields| %>
-      <div class="form-group">
-        <div class="field">
+    <%= form.fields_for :order_products do |product_fields| %>
+        <div class="form-group">
           <%= product_fields.label :quantity %>
           <%= product_fields.text_field :quantity, class:"form-control" %>
         </div>
-        <div class="field" >
+        <div class="form-group" >
           <%= product_fields.label :name %>
           <%= product_fields.select :product_id,options_for_select(Product.all.collect{|c| [c.name]}), class: "form-control" %>
         </div>
-      </div>
       <% end %> 
+
+      <%= form.fields_for :addresses do |address_fields| %>
+        <div class="form-group" >
+          <%= address_fields.label :address_type %>
+          <%= address_fields.select :address_type,options_for_select(["Billing Address","Shipping Address"]), class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+            <%= address_fields.label :land_mark %>
+            <%= address_fields.text_field :land_mark, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= address_fields.label :street %>
+          <%= address_fields.text_field :street, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= address_fields.label :city %>
+          <%= address_fields.text_field :city, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= address_fields.label :state %>
+          <%= address_fields.text_field :state, class:"form-control" %>
+        </div>
+        <div class="form-group">
+          <%= address_fields.label :zip %>
+          <%= address_fields.text_field :zip, class:"form-control" %>
+        </div> 
+        <div class="form-group">
+          <%= address_fields.hidden_field :user_id, :value=>current_user.id %>
+        </div> 
+      <% end %>
 
     <div class="actions">
       <%= form.submit "Save", class:'btn btn-success' %>
