--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -15,10 +15,10 @@
   </thead>
 
   <tbody>
-   <center><%= will_paginate @orders %></center>
+   
     <% @orders.each do |order| %>
       <tr>
-        <% if current_user && current_user.admin %>
+        <% if current_user.admin? || (current_user.id == order.user_id) %>
         <td><%= order.order_no %></td>
         <td><%= order.tracking_no %></td>
         <td><%= order.purchase_total %></td>
