--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,11 @@
+.user-info > p{
+    color: #ecab00;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+
 .back-color{
     background-color :#ecab00;
 }
