--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/alerts' %>
+    <% if current_user %>
+    <div class="user-info">
+      <p> Welcome <%= current_user.username %></p>
+    </div>
+    <% end %>
     <%= yield %>
     
   </body>
