--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,38 +1,36 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Orders</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Order no</th>
-      <th>Tracking no</th>
-      <th>Purchase total</th>
-      <th>Order type</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-   
-    <% @orders.each do |order| %>
+  <h1>Orders</h1>
+  <div class="col-md-6 col-md-offset-3">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <% if current_user.admin? || (current_user.id == order.user_id) %>
-        <td><%= order.order_no %></td>
-        <td><%= order.tracking_no %></td>
-        <td><%= order.purchase_total %></td>
-        <td><%= order.order_type %></td>
-        <td><%= order.user_id %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <th>Order no</th>
+        <th>Tracking no</th>
+        <th>Purchase total</th>
+        <th>Order type</th>
+        <th>User</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @orders.each do |order| %>
+        <tr>
+          <% if current_user.admin? || (current_user.id == order.user_id) %>
+          <td><%= order.order_no %></td>
+          <td><%= order.tracking_no %></td>
+          <td><%= order.purchase_total %></td>
+          <td><%= order.order_type %></td>
+          <td><%= order.user_id %></td>
+          <td><%= link_to 'Show', order %></td>
+          <td><%= link_to 'Edit', edit_order_path(order) %></td>
+          <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Order', new_order_path %>
+  <br>
+
+  <%= link_to 'New Order', new_order_path %>
+</div>
