--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,45 +1,49 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Products</h1>
-<%= form_tag products_path, :method => 'get' do %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Search" %>
-<% end %>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Sku</th>
-      <th>Name</th>
-      <th>Price</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
+  <h1>Products</h1>
+  <div class="col-md-6 col-md-offset-3">
+  
+  <!-- Search with product name -->
+  <%= form_tag products_path, :method => 'get' do %>
+    <div class="form-group">
+    <%= text_field_tag :search, params[:search], class: 'form-control' %>
+    <%= submit_tag "Search", class: 'btn btn-success' %>
+    </div>
+  <% end %>
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= product.sku %></td>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.user.username %></td>
-        <td><%= image_tag(product.image, :size=>"80x80") %></td>
-        <td><%= link_to 'Show', product %></td>
-        <% if current_user && !current_user.admin? %>
-          <td><%= link_to 'Buy Now', new_order_path %></td>
-        <% end %>
-        <% if current_user && current_user.admin? %>
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <th>Sku</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>User</th>
+        <th colspan="3"></th>
       </tr>
+    </thead>
 
-    <% end %>
-  </tbody>
-</table>
+    <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td><%= product.sku %></td>
+          <td><%= product.name %></td>
+          <td><%= product.price %></td>
+          <td><%= product.user.username %></td>
+          <td><%= image_tag(product.image, :size=>"80x80") %></td>
+          <td><%= link_to 'Show', product %></td>
+          <% if current_user && !current_user.admin? %>
+            <td><%= link_to 'Buy Now', new_order_path %></td>
+          <% end %>
+          <% if current_user && current_user.admin? %>
+            <td><%= link_to 'Edit', edit_product_path(product) %></td>
+            <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
 
-<br>
-<% if current_user && current_user.admin %>
-  <%= link_to 'New Product', new_product_path %>
-<% end %>
+      <% end %>
+    </tbody>
+  </table>
 
+  <br>
+  <% if current_user && current_user.admin %>
+    <%= link_to 'New Product', new_product_path %>
+  <% end %>
+</div>
