--- a/app/views/order_products/index.html.erb
+++ b/app/views/order_products/index.html.erb
@@ -1,31 +1,32 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Order Products</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Quantity</th>
-      <th>Order</th>
-      <th>Product</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @order_products.each do |order_product| %>
+<div class="col-md-8 col-md-offset-2">
+  <table class="table table-striped">
+    <thead>
       <tr>
-        <td><%= order_product.quantity %></td>
-        <td><%= order_product.order_id %></td>
-        <td><%= order_product.product_id %></td>
-        <td><%= link_to 'Show', order_product %></td>
-        <td><%= link_to 'Edit', edit_order_product_path(order_product) %></td>
-        <td><%= link_to 'Destroy', order_product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Quantity</th>
+        <th>Order</th>
+        <th>Product</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @order_products.each do |order_product| %>
+        <tr>
+          <td><%= order_product.quantity %></td>
+          <td><%= order_product.order_id %></td>
+          <td><%= order_product.product_id %></td>
+          <td><%= link_to 'Show', order_product %></td>
+          <td><%= link_to 'Edit', edit_order_product_path(order_product) %></td>
+          <td><%= link_to 'Destroy', order_product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Order Product', new_order_product_path %>
+  <br>
+
+  <%= link_to 'New Order Product', new_order_product_path %>
+</div>
