--- a/app/views/order_products/show.html.erb
+++ b/app/views/order_products/show.html.erb
@@ -1,19 +1,19 @@
-<p id="notice"><%= notice %></p>
+<div class="col-md-6 col-md-offset-3">
+  <p>
+    <strong>Quantity:</strong>
+    <%= @order_product.quantity %>
+  </p>
 
-<p>
-  <strong>Quantity:</strong>
-  <%= @order_product.quantity %>
-</p>
+  <p>
+    <strong>Order:</strong>
+    <%= @order_product.order_id %>
+  </p>
 
-<p>
-  <strong>Order:</strong>
-  <%= @order_product.order_id %>
-</p>
+  <p>
+    <strong>Product:</strong>
+    <%= @order_product.product_id %>
+  </p>
 
-<p>
-  <strong>Product:</strong>
-  <%= @order_product.product_id %>
-</p>
-
-<%= link_to 'Edit', edit_order_product_path(@order_product) %> |
-<%= link_to 'Back', order_products_path %>
+  <%= link_to 'Edit', edit_order_product_path(@order_product) %> |
+  <%= link_to 'Back', order_products_path %>
+</div>
