--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
   <h1>Orders</h1>
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-8 col-md-offset-2">
   <table class="table table-striped">
     <thead>
       <tr>
@@ -9,6 +9,7 @@
         <th>Purchase total</th>
         <th>Order type</th>
         <th>User</th>
+        <th>Created Date</th>
       </tr>
     </thead>
 
@@ -21,6 +22,7 @@
           <td><%= order.purchase_total %></td>
           <td><%= order.order_type %></td>
           <td><%= order.user_id %></td>
+          <td><%= order.created_at %></td>
           <td><%= link_to 'Show', order %></td>
           <td><%= link_to 'Edit', edit_order_path(order) %></td>
           <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
