--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -18,7 +18,12 @@
     <strong>Order type:</strong>
     <%= @order.order_type %>
   </p>
-  
+
+  <p>
+    <strong>Order Created:</strong>
+    <%= @order.created_at %>
+  </p>
+
   <p>
     <strong>City:</strong>
     <%= order=(Order.find_by(params[@order.user_id]).addresses.first.city)%>
@@ -48,7 +53,7 @@
           </p>
 
         <% end %>
-  </p>
+    </p>
 
   <%= link_to 'Edit', edit_order_path(@order) %> |
   <%= link_to 'Back', orders_path %>
