--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,6 +10,7 @@
         <th>Order type</th>
         <th>User</th>
         <th>Created Date</th>
+        <th>Product Name</th>
       </tr>
     </thead>
 
@@ -23,6 +24,7 @@
           <td><%= order.order_type %></td>
           <td><%= order.user_id %></td>
           <td><%= order.created_at %></td>
+          <td><%= order.products.last.name %></td>
           <td><%= link_to 'Show', order %></td>
           <td><%= link_to 'Edit', edit_order_path(order) %></td>
           <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
