--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
   <!-- Search with product name -->
   <%= form_tag products_path, :method => 'get' do %>
     <div class="form-group">
-    <%= text_field_tag :search, params[:search], class: 'form-control' %>
+    <%= text_field_tag :search, params[:search], class: 'form-group mb-2' %>
     <%= submit_tag "Search", class: 'btn btn-success' %>
     </div>
   <% end %>
