--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -13,13 +13,11 @@
     <% end %>
 
     <div class="form-group">
-      <%= form.label :order_no %>
-      <%= form.number_field :order_no, :value => "#{rand(10..1000)}",:readonly => true, class: 'form-control' %>
+      <%= form.hidden_field :order_no, :value => "#{rand(10..1000)}",:readonly => true, class: 'form-control' %>
     </div>
 
     <div class="form-group">
-      <%= form.label :tracking_no %>
-      <%= form.number_field :tracking_no, :value => "#{rand(10..10000)}",:readonly => true, class: 'form-control' %>
+      <%= form.hidden_field :tracking_no, :value => "#{rand(10..10000)}",:readonly => true, class: 'form-control' %>
     </div>
 
     <div class="form-group">
