--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,7 @@
           <td><%= order.tracking_no %></td>
           <td><%= order.purchase_total %></td>
           <td><%= order.order_type %></td>
-          <td><%= order.user_id %></td>
+          <td><%= order.user.username %></td>
           <td><%= order.created_at %></td>
           <td><%= order.products.last.name %></td>
           <td><%= link_to 'Show', order %></td>
